# PSFModels.jl

./: .gitignore  LICENSE  Project.toml  README.md  versions.js
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  preview-cleanup.yml
bench/: CondaPkg.toml  Manifest-v1.12.toml  Manifest.toml  Project.toml  bench.jl  evaluation_results.csv  fitting_results.csv  pyproject.toml  requirements.txt  results.csv
benchmark/: Project.toml  benchmarks.jl
dev/: .documenter-siteinfo.json  index.html  search_index.js
dev/api/: index.html
dev/bench/: index.html
dev/examples/: index.html
dev/introduction/: index.html
dev/search/: index.html
docs/: Manifest.toml  Project.toml  make.jl  pages.jl
src/: PSFKernels.jl  PSFModels.jl  airy.jl  core.jl  empirical_builder.jl  empirical_models.jl  fitting.jl  fitting_functional.jl  fitting_struct.jl  functional_models.jl  gaussian.jl  levenberg_marquardt.jl  moffat.jl  optim_fitting.jl  parametric_models.jl  plotting.jl  scaled.jl  simulation.jl
test/: Project.toml  common_tests.jl  empirical_model_tests.jl  fitting.jl  fitting_struct.jl  functional_fitting_test.jl  functional_test.jl  plotting.jl  runtests.jl  simulation_test.jl
v0.1.0/: index.html
v0.1.1/: index.html
v0.1.2/: index.html
v0.2.0/: index.html
v0.3.0/: index.html
v0.4.0/: index.html
v0.4.1/: index.html
v0.5.0/: index.html
v0.5.1/: index.html
v0.6.0/: index.html
v0.7.0/: index.html
v0.7.1/: index.html
v0.8.0/: index.html
v0.8.1/: index.html
v0.8.2/: index.html
v0.8.3/: .documenter-siteinfo.json  index.html
(+107 files in other folders)
