[tool.poetry]
name = "bench"
version = "0.1.0"
description = ""
authors = ["Miles Lucas <mdlucas@hawaii.edu>"]

[tool.poetry.dependencies]
python = "^3.7,<3.10"
astropy = "^4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
